@@ -1,4 +1,4 @@
-/* Generated by re2c 0.13.5 on Thu Dec 18 14:58:43 2008 */
+/* Generated by re2c 0.13.5 on Wed Jul 29 16:20:12 2009 */
 #line 1 "ext/date/lib/parse_date.re"
 /*
    +----------------------------------------------------------------------+
@@ -24086,10 +24086,18 @@ timelib_time *timelib_parse_from_format(char *format, char *string, int len, tim
 					add_pbf_error(s, "A two digit second could not be found", string, begin);
 				}
 				break;
-			case 'u': /* five digit millisecond, with leading zero */
-				TIMELIB_CHECK_NUMBER;
-				if ((s->time->f = timelib_get_nr((char **) &ptr, 5)) == TIMELIB_UNSET) {
-					add_pbf_error(s, "A five digit millisecond could not be found", string, begin);
+			case 'u': /* six digit millisecond */
+				{
+					double f;
+					char *tptr;
+
+					TIMELIB_CHECK_NUMBER;
+					tptr = ptr;
+					if ((f = timelib_get_nr((char **) &ptr, 6)) == TIMELIB_UNSET || ptr - tptr != 6) {
+						add_pbf_error(s, "A six digit millisecond could not be found", string, begin);
+					} else {
+						s->time->f = (f / 1000000);
+					}
 				}
 				break;
 			case ' ': /* any sort of whitespace (' ' and \t) */
